implement socket rooms

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -9,8 +9,11 @@
   <title>Card Game</title>
 </head>
 
-<body>
-  <h1>Index</h1>
+<body style="height: 100vh; margin: 0;">
+  <div style="height:100%; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+    <h1><%= errorCode %></h1>
+    <h2><%= errorMessage %></h2>
+  </div>
 </body>
 
 </html>
