--- a/views/room.ejs
+++ b/views/room.ejs
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/script.js" defer></script>
+  <script src="/js/room.js" defer></script>
   <title>Card Game</title>
 </head>
 
 <body>
-  <h1>Index</h1>
+  <h1>Room ID: <%= roomId %></h1>
 </body>
 
 </html>
