style index and room pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/script.js" defer></script>
+  <script src="/js/index.js" defer></script>
+  <link rel="stylesheet" href="/css/default.css">
+  <link rel="stylesheet" href="/css/index.css">
   <title>Card Game</title>
 </head>
 
 <body>
-  <h1>Index</h1>
+  <div class="page-container">
+    <img class="user-image" src="https://cdn.discordapp.com/attachments/1064471000932155434/1338613978636619806/profile-placeholder.png?ex=67abb8ea&is=67aa676a&hm=f939d3c02d447fb9b653c1c2f2952ca11954984ba237d78334d68fe078b52c38&" alt="">
+    <label class="nickname-label" for="nickname-input">Nickname</label>
+    <input class="nickname-input" id="nickname-input" type="text">
+    <button class="play-button" id="play-button">Play</button>
+  </div>
 </body>
 
 </html>
