--- a/views/error.ejs
+++ b/views/error.ejs
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/script.js" defer></script>
+  <link rel="stylesheet" href="/css/default.css">
+  <link rel="stylesheet" href="/css/error.css">
   <title>Card Game</title>
 </head>
 
