--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,12 @@
 
 <body>
   <div class="page-container">
-    <img class="user-image" src="https://cdn.discordapp.com/attachments/1064471000932155434/1338613978636619806/profile-placeholder.png?ex=67abb8ea&is=67aa676a&hm=f939d3c02d447fb9b653c1c2f2952ca11954984ba237d78334d68fe078b52c38&" alt="">
+    <div class="user-image-container">
+      <img class="user-image" id="user-image" src="" alt="profile picture">
+      <svg id="user-image-reload" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+        <path fill="currentColor" d="M12 20q-3.35 0-5.675-2.325T4 12t2.325-5.675T12 4q1.725 0 3.3.712T18 6.75V5q0-.425.288-.712T19 4t.713.288T20 5v5q0 .425-.288.713T19 11h-5q-.425 0-.712-.288T13 10t.288-.712T14 9h3.2q-.8-1.4-2.187-2.2T12 6Q9.5 6 7.75 7.75T6 12t1.75 4.25T12 18q1.7 0 3.113-.862t2.187-2.313q.2-.35.563-.487t.737-.013q.4.125.575.525t-.025.75q-1.025 2-2.925 3.2T12 20" />
+      </svg>
+    </div>
     <label class="nickname-label" for="nickname-input">Nickname</label>
     <input class="nickname-input" id="nickname-input" type="text">
     <button class="play-button" id="play-button">Play</button>
