scaledown some ui

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -15,50 +15,12 @@
 <body>
   <div class="page-container">
     <div class="players scroll" id="players">
+      <!--  Player template     
       <div class="player">
         <img class="user-image" src="https://cdn.discordapp.com/attachments/1064471000932155434/1338613978636619806/profile-placeholder.png?ex=67abb8ea&is=67aa676a&hm=f939d3c02d447fb9b653c1c2f2952ca11954984ba237d78334d68fe078b52c38&" alt="">
         <h2>name</h2>
-      </div>
-
-      <div class="player">
-        <img class="user-image" src="https://cdn.discordapp.com/attachments/1064471000932155434/1338613978636619806/profile-placeholder.png?ex=67abb8ea&is=67aa676a&hm=f939d3c02d447fb9b653c1c2f2952ca11954984ba237d78334d68fe078b52c38&" alt="">
-        <h2>name</h2>
-      </div>
-
-      <div class="player">
-        <img class="user-image" src="https://cdn.discordapp.com/attachments/1064471000932155434/1338613978636619806/profile-placeholder.png?ex=67abb8ea&is=67aa676a&hm=f939d3c02d447fb9b653c1c2f2952ca11954984ba237d78334d68fe078b52c38&" alt="">
-        <h2>name</h2>
-      </div>
-
-      <div class="player">
-        <img class="user-image" src="https://cdn.discordapp.com/attachments/1064471000932155434/1338613978636619806/profile-placeholder.png?ex=67abb8ea&is=67aa676a&hm=f939d3c02d447fb9b653c1c2f2952ca11954984ba237d78334d68fe078b52c38&" alt="">
-        <h2>name</h2>
-      </div>
-
-      <div class="player">
-        <img class="user-image" src="https://cdn.discordapp.com/attachments/1064471000932155434/1338613978636619806/profile-placeholder.png?ex=67abb8ea&is=67aa676a&hm=f939d3c02d447fb9b653c1c2f2952ca11954984ba237d78334d68fe078b52c38&" alt="">
-        <h2>name</h2>
-      </div>
-
-      <div class="player">
-        <img class="user-image" src="https://cdn.discordapp.com/attachments/1064471000932155434/1338613978636619806/profile-placeholder.png?ex=67abb8ea&is=67aa676a&hm=f939d3c02d447fb9b653c1c2f2952ca11954984ba237d78334d68fe078b52c38&" alt="">
-        <h2>name</h2>
-      </div>
-
-      <div class="player">
-        <img class="user-image" src="https://cdn.discordapp.com/attachments/1064471000932155434/1338613978636619806/profile-placeholder.png?ex=67abb8ea&is=67aa676a&hm=f939d3c02d447fb9b653c1c2f2952ca11954984ba237d78334d68fe078b52c38&" alt="">
-        <h2>name</h2>
-      </div>
-
-      <div class="player">
-        <img class="user-image" src="https://cdn.discordapp.com/attachments/1064471000932155434/1338613978636619806/profile-placeholder.png?ex=67abb8ea&is=67aa676a&hm=f939d3c02d447fb9b653c1c2f2952ca11954984ba237d78334d68fe078b52c38&" alt="">
-        <h2>name</h2>
-      </div>
-
-      <div class="player">
-        <img class="user-image" src="https://cdn.discordapp.com/attachments/1064471000932155434/1338613978636619806/profile-placeholder.png?ex=67abb8ea&is=67aa676a&hm=f939d3c02d447fb9b653c1c2f2952ca11954984ba237d78334d68fe078b52c38&" alt="">
-        <h2>name</h2>
-      </div>
+      </div> 
+    -->
     </div>
     <div class="room-settings">
       <h1>Room Title</h1>
