--- a/public/css/room.css
+++ b/public/css/room.css
@@ -42,6 +42,12 @@ h1 {
 .user-image {
     width: 3rem;
     height: 3rem;
+    transform: scale(1.6367352185);
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 .scroll {
