add events and lerp mechanics

--- a/views/partials/game-content.ejs
+++ b/views/partials/game-content.ejs
@@ -1,20 +1,22 @@
-<script src="/js/game.js"></script>
 <link rel="stylesheet" href="/css/game.css">
 
 <div class="you">
-  <div class="card-scrolling"></div>
-  <div class="your-cards">
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
+  <div class="card-scrolling" id="card-scrolling">
+    <div class="your-cards">
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+    </div>
   </div>
 </div>
