--- a/public/css/game.css
+++ b/public/css/game.css
@@ -1,19 +1,36 @@
-.your-cards {
-    position: fixed;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
+body {
+    user-select: none;
+}
 
-    display: grid;
+.your-cards {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+
+    height: calc(100% - 2rem);
+    padding: 1rem;
+    width: calc(100% - 2rem);
+
+    display: flex;
     gap: 1rem;
-    grid-auto-flow: column;
-    width: 80vw;
+    align-items: center;
 }
 
 .card {
     background-color: var(--font-alt);
-    /* width: 5rem; */
+    height: 10rem;
     aspect-ratio: 2 / 3;
 }
 
-.card-scrolling {}
+.card-scrolling {
+    background-color: cadetblue;
+    position: fixed;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+
+    height: 15rem;
+    width: clamp(25rem, 45vw, 50rem);
+}
