--- a/views/partials/game-content.ejs
+++ b/views/partials/game-content.ejs
@@ -3,20 +3,64 @@
 <div class="you">
   <div class="card-scrolling" id="card-scrolling">
     <div class="your-cards">
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+      <div class="card-container">
+        <div class="card"></div>
+      </div>
+
     </div>
   </div>
 </div>
