--- a/views/partials/room-content.ejs
+++ b/views/partials/room-content.ejs
@@ -11,94 +11,8 @@
 <div class="room-settings">
   <h1>Room Title</h1>
 
-  <div class="settings scroll">
-    <div class="select-container">
-      <h2>Option 1</h2>
-      <select name="option01" id="option01">
-        <option value="setting-01">setting-01</option>
-        <option value="setting-02">setting-02</option>
-        <option value="setting-03">setting-03</option>
-        <option value="setting-04">setting-04</option>
-      </select>
-      <label class="arrow" for="option01">▼</label>
-    </div>
+  <div class="settings scroll" id="settings">
 
-    <div class="select-container">
-      <h2>Option 2</h2>
-      <select name="option02" id="option02">
-        <option value="setting-01">setting-01</option>
-        <option value="setting-02">setting-02</option>
-        <option value="setting-03">setting-03</option>
-        <option value="setting-04">setting-04</option>
-      </select>
-      <label class="arrow" for="option02">▼</label>
-    </div>
-
-    <div class="select-container">
-      <h2>Option 3</h2>
-      <select name="option03" id="option03">
-        <option value="setting-01">setting-01</option>
-        <option value="setting-02">setting-02</option>
-        <option value="setting-03">setting-03</option>
-        <option value="setting-04">setting-04</option>
-      </select>
-      <label class="arrow" for="option02">▼</label>
-    </div>
-
-    <div class="select-container">
-      <h2>Option 4</h2>
-      <select name="option04" id="option04">
-        <option value="setting-01">setting-01</option>
-        <option value="setting-02">setting-02</option>
-        <option value="setting-03">setting-03</option>
-        <option value="setting-04">setting-04</option>
-      </select>
-      <label class="arrow" for="option02">▼</label>
-    </div>
-
-    <div class="select-container">
-      <h2>Option 5</h2>
-      <select name="option05" id="option05">
-        <option value="setting-01">setting-01</option>
-        <option value="setting-02">setting-02</option>
-        <option value="setting-03">setting-03</option>
-        <option value="setting-04">setting-04</option>
-      </select>
-      <label class="arrow" for="option02">▼</label>
-    </div>
-
-    <div class="select-container">
-      <h2>Option 6</h2>
-      <select name="option06" id="option06">
-        <option value="setting-01">setting-01</option>
-        <option value="setting-02">setting-02</option>
-        <option value="setting-03">setting-03</option>
-        <option value="setting-04">setting-04</option>
-      </select>
-      <label class="arrow" for="option02">▼</label>
-    </div>
-
-    <div class="select-container">
-      <h2>Option 7</h2>
-      <select name="option07" id="option07">
-        <option value="setting-01">setting-01</option>
-        <option value="setting-02">setting-02</option>
-        <option value="setting-03">setting-03</option>
-        <option value="setting-04">setting-04</option>
-      </select>
-      <label class="arrow" for="option02">▼</label>
-    </div>
-
-    <div class="select-container">
-      <h2>Option 8</h2>
-      <select name="option08" id="option08">
-        <option value="setting-01">setting-01</option>
-        <option value="setting-02">setting-02</option>
-        <option value="setting-03">setting-03</option>
-        <option value="setting-04">setting-04</option>
-      </select>
-      <label class="arrow" for="option02">▼</label>
-    </div>
   </div>
 
   <button class="start-button" id="start-button">Start</button>
