--- a/public/css/game.css
+++ b/public/css/game.css
@@ -21,53 +21,31 @@ body {
 }
 
 .card-container {
+    --x: 0px;
+    --y: 0px;
+    --ang: 0deg;
+
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%) rotate(var(--ang));
+
+    translate: var(--x) var(--y);
+
     transform-style: preserve-3d;
     perspective: 800px;
     perspective-origin: center;
 }
 
 .card {
-    --ry: 5deg;
-    --rx: 30deg;
-    --rz: -5deg;
-    transform: rotateX(var(--ry)) rotateY(var(--rx)) rotateZ(var(--rz));
+    border: solid;
+    --rx: 0deg;
+    --ry: 0deg;
+    --rz: 0deg;
+    transform: rotateX(var(--rx)) rotateY(var(--ry)) rotateZ(var(--rz));
     background-color: var(--font-alt);
     height: 10rem;
     aspect-ratio: 2 / 3;
-    animation: identifier 10000ms ease infinite forwards;
-
-}
-
-@keyframes identifier {
-    from {
-        --ry: 0deg;
-        --rx: 0deg;
-        --rz: 0deg;
-    }
-
-    to {
-        --ry: 360deg;
-        --rx: 360deg;
-        --rz: 360deg;
-    }
-}
-
-@property --ry {
-    syntax: "<angle>";
-    initial-value: 0deg;
-    inherits: false;
-}
-
-@property --rx {
-    syntax: "<angle>";
-    initial-value: 0deg;
-    inherits: false;
-}
-
-@property --rz {
-    syntax: "<angle>";
-    initial-value: 0deg;
-    inherits: false;
 }
 
 .card-scrolling {
