add room title + fix client side userList sync

--- a/views/partials/room-content.ejs
+++ b/views/partials/room-content.ejs
@@ -9,7 +9,7 @@
   -->
 </div>
 <div class="room-settings">
-  <h1>Room Title</h1>
+  <h1 id="room-title">Room Title</h1>
 
   <div class="settings scroll" id="settings">
 
