--- a/public/css/game.css
+++ b/public/css/game.css
@@ -2,7 +2,7 @@ body {
     user-select: none;
 }
 
-.your-cards {
+.self-cards {
     /* overflow: hidden; */
 
     position: absolute;
@@ -20,6 +20,24 @@ body {
     align-items: center;
 }
 
+@property --x {
+    syntax: '<length>';
+    initial-value: 0px;
+    inherits: false;
+}
+
+@property --y {
+    syntax: '<length>';
+    initial-value: 0px;
+    inherits: false;
+}
+
+@property --ang {
+    syntax: '<angle>';
+    initial-value: 0deg;
+    inherits: false;
+}
+
 .card-container {
     --x: 0px;
     --y: 0px;
@@ -28,13 +46,25 @@ body {
     position: absolute;
     left: 50%;
     bottom: 0;
-    transform: translateX(-50%) rotate(var(--ang));
 
+    transform: translateX(-50%) rotate(var(--ang));
     translate: var(--x) var(--y);
 
     transform-style: preserve-3d;
     perspective: 800px;
     perspective-origin: center;
+    transform-origin: bottom;
+
+    transition: --x 0.3s, --y 0.3s, --ang 0.3s;
+}
+
+.card-container::after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 80px;
 }
 
 .card {
