--- a/views/partials/game-content.ejs
+++ b/views/partials/game-content.ejs
@@ -2,28 +2,8 @@
 
 <div class="you">
   <div class="card-scrolling" id="card-scrolling">
-    <div class="your-cards">
-      <div class="card-container">
-        <div class="card"></div>
-      </div>
-      <div class="card-container">
-        <div class="card"></div>
-      </div>
-      <div class="card-container">
-        <div class="card"></div>
-      </div>
-      <div class="card-container">
-        <div class="card"></div>
-      </div>
-      <div class="card-container">
-        <div class="card"></div>
-      </div>
-      <div class="card-container">
-        <div class="card"></div>
-      </div>
-      <div class="card-container">
-        <div class="card"></div>
-      </div>
+    <div class="self-cards" id="self-cards">
+
     </div>
   </div>
 </div>
