style game menu

--- a/views/partials/game-content.ejs
+++ b/views/partials/game-content.ejs
@@ -1,9 +1,27 @@
 <link rel="stylesheet" href="/css/game.css">
 
+<div class="user-info">
+  <img class="user-icon" id="user-icon"></img>
+  <h2 class="user-nickname" id="user-nickname"></h2>
+  <div class="user-cards-count" id="user-cards-count">5</div>
+</div>
+
 <div class="you">
   <div class="card-scrolling" id="card-scrolling">
     <div class="self-cards" id="self-cards">
-
+      <!-- cards add in js -->
     </div>
+  </div>
+</div>
+
+<div class="table">
+  <div class="drawing-deck"></div>
+  <div class="discard-pile"></div>
+</div>
+
+<div class="turns-list" id="turns-list">
+  <div class="users-container scroll" id="users-container">
+    <div class="turn-indicator">Turn ></div>
+    <!-- generated in script -->
   </div>
 </div>
