--- a/public/css/default.css
+++ b/public/css/default.css
@@ -25,3 +25,27 @@ body * {
     color: var(--font);
     font-family: "Montserrat", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.scroll {
+    overflow-y: auto;
+}
+
+.scroll::-webkit-scrollbar {
+    width: 10px;
+}
+
+.scroll::-webkit-scrollbar-track {
+    background-color: var(--gray);
+    border: solid 5px transparent;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+    background-color: var(--font);
+    border-radius: 50px;
+    background-clip: content-box;
+    border: solid 1pt transparent;
+}
+
+.scroll::-webkit-scrollbar-corner {
+    background-color: var(--gray)
+}
