--- a/public/css/game.css
+++ b/public/css/game.css
@@ -77,7 +77,7 @@ body {
     user-select: none;
     box-shadow: -4px 4px 4px 3px rgba(0, 0, 0, 0.25);
     border-radius: 5pt;
-    border: var(--font) 2pt solid;
+    /* border: var(--font) 2pt solid; */
     --rx: 0deg;
     --ry: 0deg;
     --rz: 0deg;
