--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="/socket.io/socket.io.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js" defer></script>
   <script src="/js/script.js" defer></script>
   <script src="/js/index.js" defer></script>
   <link rel="stylesheet" href="/css/default.css">
