--- a/public/css/default.css
+++ b/public/css/default.css
@@ -8,6 +8,7 @@
     --gray: #aaaaaa;
     --accent-green: #a9ff77;
     --accent-green-darker: #89ce62;
+    --accent-green-alt: rgb(100 255 155);
 }
 
 html,
