--- a/public/css/game.css
+++ b/public/css/game.css
@@ -231,7 +231,14 @@ body {
 }
 
 .turns-list .player-info.turn {
-    box-shadow: inset 0 0 20px 1px rgb(68, 255, 65)
+    box-shadow: inset 0 0 20px 1px rgb(68, 255, 65);
+}
+
+.turns-list .player-info.away {
+    box-shadow: inset 0 0 10px 1px rgb(255, 68, 65);
+}
+.turns-list .player-info.away .player-icon {
+    filter: grayscale(1);
 }
 
 .player-info .player-icon {
