--- a/views/partials/game-content.ejs
+++ b/views/partials/game-content.ejs
@@ -16,7 +16,7 @@
 
 <div class="table">
   <div class="drawing-deck"></div>
-  <div class="discard-pile"></div>
+  <div class="discard-pile" id="discard-pile"></div>
 </div>
 
 <div class="turns-list" id="turns-list">
