add customization button and menu

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -6,6 +6,7 @@
     --font: #242222;
     --font-alt: #efe1e3;
     --gray: #aaaaaa;
+    --gray-darker: #adadad;
     --accent-green: #a9ff77;
     --accent-green-darker: #89ce62;
     --accent-green-alt: rgb(100 255 155);
