--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,32 @@
     <label class="nickname-label" for="nickname-input">Nickname</label>
     <input class="nickname-input" id="nickname-input" type="text">
     <button class="play-button" id="play-button">Play</button>
+
+    <div class="customization-container">
+      <button class="customize-button" id="customize-button">
+        <!-- add image for the main menu button -->
+      </button>
+
+      <div class="customization-menu" id="customization-menu">
+        <h2>Card style</h2>
+        <div class="card-styles">
+          <button class="card-style-container">
+            <img src="" alt="">
+          </button>
+          <button class="card-style-container">
+            <img src="" alt="">
+          </button>
+          <button class="card-style-container">
+            <img src="" alt="">
+          </button>
+        </div>
+        <div class="card-border">
+          <h2>Card border</h2>
+          <input type="checkbox" name="card-border-input" id="card-border-input" class="card-border-input">
+        </div>
+        <button class="confirm-customization-button" id="confirm-customization-button">Done</button>
+      </div>
+    </div>
   </div>
 </body>
 
