--- a/public/css/default.css
+++ b/public/css/default.css
@@ -10,6 +10,7 @@
     --accent-green: #a9ff77;
     --accent-green-darker: #89ce62;
     --accent-green-alt: rgb(100 255 155);
+    --accent-green-alt-darker: hsl(141, 42%, 50%);
 }
 
 html,
