add "Turn >" move in turn list animation

--- a/views/partials/game-content.ejs
+++ b/views/partials/game-content.ejs
@@ -19,9 +19,9 @@
   <div class="discard-pile" id="discard-pile"></div>
 </div>
 
-<div class="turns-list" id="turns-list">
-  <div class="users-container scroll" id="users-container">
-    <div class="turn-indicator">Turn ></div>
+<div class="turns-list scroll" id="turns-list">
+  <div class="turn-indicator" id="turn-indicator">Turn ></div>
+  <div class="users-container" id="users-container">
     <!-- generated in script -->
   </div>
 </div>
