--- a/public/css/game.css
+++ b/public/css/game.css
@@ -202,29 +202,33 @@ body {
 }
 
 .turns-list {
-    padding: 1rem;
+    display: grid;
+    grid-template-columns: calc(6rem - 10px) 18rem;
+    width: calc(6rem + 18rem + 2rem);
+    max-height: 50vh;
+    overflow-x: hidden;
     position: fixed;
     top: 0;
     right: 0;
-    width: 18rem;
-    /* height: calc(100vh - 8rem); */
-    background-color: var(--font-alt);
-    border-radius: 0 0 0 2rem;
 }
 
 .turn-indicator {
-    position: absolute;
-
-    top: 50%;
-    right: calc(100% + 2rem);
-    transform: translateY(-50%);
-
+    height: fit-content;
+    position: relative;
+    top: 3rem;
+    left: 0;
     font-size: 16pt;
     font-weight: 900;
     text-wrap: nowrap;
 }
 
 .turns-list .users-container {
+    background-color: var(--font-alt);
+    box-shadow: 10px 0 0 0 var(--font-alt);
+    ;
+    border-radius: 0 0 0 2rem;
+    width: 18rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
