--- a/public/css/game.css
+++ b/public/css/game.css
@@ -1,3 +1,7 @@
+:root {
+    --card-border: none
+}
+
 body {
     user-select: none;
 }
@@ -96,6 +100,7 @@ body {
     box-shadow: -4px 4px 4px 3px rgba(0, 0, 0, 0.25);
     border-radius: 5pt;
     /* border: var(--font) 2pt solid; */
+    border: var(--card-border);
     --rx: inherit;
     --ry: inherit;
     --rz: inherit;
@@ -196,6 +201,8 @@ body {
     position: absolute;
     height: 10rem;
     aspect-ratio: 2 / 3;
+    border: var(--card-border);
+    border-radius: 5pt;
     box-shadow: -4px 4px 4px 3px rgba(0, 0, 0, 0.25);
     transform: rotate(var(--ang));
     translate: var(--x) var(--y);
