--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,20 +28,13 @@
     <div class="customization-container">
       <button class="customize-button" id="customize-button">
         <!-- add image for the main menu button -->
+        <img id="customize-button-icon" src="" alt="customize-button-icon">
       </button>
 
       <div class="customization-menu" id="customization-menu">
         <h2>Card style</h2>
-        <div class="card-styles">
-          <button class="card-style-container">
-            <img src="" alt="">
-          </button>
-          <button class="card-style-container">
-            <img src="" alt="">
-          </button>
-          <button class="card-style-container">
-            <img src="" alt="">
-          </button>
+        <div class="deck-skins-container" id="deck-skins-container">
+          <!-- add card decks -->
         </div>
         <div class="card-border">
           <h2>Card border</h2>
