--- a/public/css/game.css
+++ b/public/css/game.css
@@ -209,6 +209,8 @@ body {
 }
 
 .turns-list {
+    --turn-list-height: 0px;
+
     display: grid;
     grid-template-columns: calc(6rem - 10px) 18rem;
     width: calc(6rem + 18rem + 2rem);
@@ -230,15 +232,25 @@ body {
 }
 
 .turns-list .users-container {
-    background-color: var(--font-alt);
     box-shadow: 10px 0 0 0 var(--font-alt);
-    ;
     border-radius: 0 0 0 2rem;
     width: 18rem;
     padding: 1rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.turns-list .users-container::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    right: 10px;
+    height: var(--turn-list-height);
+    width: calc(18rem + 2rem);
+    max-height: 50vh;
+    background-color: var(--font-alt);
+    border-radius: 0 0 0 1rem;
 }
 
 .turns-list .player-info {
