--- a/views/room.ejs
+++ b/views/room.ejs
@@ -7,6 +7,7 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/CustomEase.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/Draggable.min.js" defer></script>
   <script src="/js/script.js" defer></script>
   <script src="/js/room.js" defer></script>
   <link rel="stylesheet" href="/css/default.css">
