--- a/public/css/game.css
+++ b/public/css/game.css
@@ -52,6 +52,7 @@ body {
     --x: 0px;
     --y: 0px;
     --ang: 0deg;
+    --after-height: 0px;
 
     position: absolute;
     left: 50%;
@@ -71,10 +72,10 @@ body {
 .self-cards .card-container::after {
     content: '';
     position: absolute;
-    top: 100%;
+    top: calc(100% - 10px);
     left: 0;
     width: 100%;
-    height: 180px;
+    height: var(--after-height);
 }
 
 @property --rx {
