starting drawing-deck implementation

--- a/views/partials/game-content.ejs
+++ b/views/partials/game-content.ejs
@@ -15,7 +15,7 @@
 </div>
 
 <div class="table">
-  <div class="drawing-deck"></div>
+  <div class="drawing-deck" id="drawing-deck"></div>
   <div class="discard-pile" id="discard-pile"></div>
 </div>
 
