--- a/views/partials/game-content.ejs
+++ b/views/partials/game-content.ejs
@@ -25,3 +25,13 @@
     <!-- generated in script -->
   </div>
 </div>
+
+<div class="wild-color-selector hide" id="wild-color-selector">
+  <div class="backdrop" id="wild-color-backdrop"></div>
+  <div class="color-wheel" id="color-wheel">
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+  </div>
+</div>
