--- a/views/partials/game-content.ejs
+++ b/views/partials/game-content.ejs
@@ -6,7 +6,7 @@
   <div class="user-cards-count" id="user-cards-count">5</div>
 </div>
 
-<div class="you">
+<div class="self">
   <div class="card-scrolling" id="card-scrolling">
     <div class="self-cards" id="self-cards">
       <!-- cards add in js -->
