--- a/views/partials/game-content.ejs
+++ b/views/partials/game-content.ejs
@@ -6,15 +6,13 @@
   <div class="user-cards-count" id="user-cards-count">5</div>
 </div>
 
-<div class="self-cards-container" id="self-cards-container">
-  <div class="self-cards" id="self-cards">
-    <!-- cards add in js -->
-  </div>
-</div>
-
-<div class="table">
+<div class="table-piles" id="table-piles">
   <div class="drawing-deck" id="drawing-deck"></div>
   <div class="discard-pile" id="discard-pile"></div>
+</div>
+
+<div class="self-cards" id="self-cards">
+  <!-- cards add in js -->
 </div>
 
 <div class="turns-list scroll" id="turns-list">
