animate draw from others + throw from others + add var for pfp num

--- a/views/partials/game-content.ejs
+++ b/views/partials/game-content.ejs
@@ -6,6 +6,10 @@
   <div class="user-cards-count" id="user-cards-count">5</div>
 </div>
 
+<div class="other-positions-container" id="other-positions-container">
+  <div class="other-positions" id="other-positions"></div>
+</div>
+
 <div class="table-piles" id="table-piles">
   <div class="drawing-deck" id="drawing-deck"></div>
   <div class="discard-pile" id="discard-pile"></div>
