--- a/public/css/game.css
+++ b/public/css/game.css
@@ -185,6 +185,24 @@ body {
     font-weight: 900;
 }
 
+.other-positions {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 50vw;
+}
+
+.other-positions-container .card {
+    position: absolute;
+    height: 10rem;
+    aspect-ratio: 2 / 3;
+    border: var(--card-border);
+    border-radius: 5pt;
+    box-shadow: -4px 4px 4px 3px rgba(0, 0, 0, 0.25);
+    z-index: 100;
+}
+
 .table-piles {
     position: fixed;
     top: calc(75% - 15rem);
