--- a/public/css/game.css
+++ b/public/css/game.css
@@ -203,6 +203,16 @@ body {
     z-index: 100;
 }
 
+.discard-dummy .card {
+    position: absolute;
+    height: 10rem;
+    aspect-ratio: 2 / 3;
+    border: var(--card-border);
+    border-radius: 5pt;
+    box-shadow: -4px 4px 4px 3px rgba(0, 0, 0, 0.25);
+    z-index: 100;
+}
+
 .table-piles {
     position: fixed;
     top: calc(75% - 15rem);
