--- a/views/room.ejs
+++ b/views/room.ejs
@@ -9,6 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/CustomEase.min.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/Draggable.min.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/EasePack.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/MotionPathPlugin.min.js"></script>
   <script src="/js/script.js" defer></script>
   <script src="/js/room.js" defer></script>
   <link rel="stylesheet" href="/css/default.css">
