--- a/views/partials/game-content.ejs
+++ b/views/partials/game-content.ejs
@@ -10,9 +10,9 @@
   <div class="other-positions" id="other-positions"></div>
 </div>
 
-<div class="discard-dummy" id="discard-dummy" width="100" height="100" viewBox="0 0 100 100"></div>
 
 <div class="table-piles" id="table-piles">
+  <div class="shuffle-dummy" id="shuffle-dummy"></div>
   <div class="drawing-deck" id="drawing-deck"></div>
   <div class="discard-pile" id="discard-pile"></div>
 </div>
