--- a/views/partials/game-content.ejs
+++ b/views/partials/game-content.ejs
@@ -21,6 +21,8 @@
   <!-- cards add in js -->
 </div>
 
+<div class="hitmarker" id="hitmarker">+12</div>
+
 <div class="turns-list scroll" id="turns-list">
   <div class="turn-indicator" id="turn-indicator">Turn ></div>
   <div class="users-container" id="users-container">
