--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,9 +7,11 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js" defer></script>
   <script src="/js/script.js" defer></script>
+  <script src="/js/modal.js"></script>
   <script src="/js/index.js" defer></script>
   <link rel="stylesheet" href="/css/default.css">
   <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="/css/modal.css">
   <title>Card Game</title>
 </head>
 
@@ -40,6 +42,7 @@
           <h2>Card border</h2>
           <input type="checkbox" name="card-border-input" id="card-border-input" class="card-border-input">
         </div>
+        <button class="reset-customization-button" id="reset-customization-button">Reset</button>
         <button class="confirm-customization-button" id="confirm-customization-button">Done</button>
       </div>
     </div>
