--- a/views/partials/game-content.ejs
+++ b/views/partials/game-content.ejs
@@ -22,6 +22,10 @@
 </div>
 
 <div class="hitmarker" id="hitmarker">+12</div>
+<div class="game-buttons" id="game-buttons">
+  <button class="uno-button" id="uno-button">WA7ED!</button>
+  <button class="skip-button" id="skip-button">Skip turn</button>
+</div>
 
 <div class="turns-list scroll" id="turns-list">
   <div class="turn-indicator" id="turn-indicator">Turn ></div>
