--- a/public/css/default.css
+++ b/public/css/default.css
@@ -56,3 +56,56 @@ body * {
 .hide {
     display: none;
 }
+
+.disabled-tool-tip {
+    --tip-msg: "Tool tip";
+    position: relative;
+}
+
+.disabled-tool-tip::after {
+    user-select: none;
+    pointer-events: none;
+    width: max-content;
+    max-width: 10rem;
+    content: var(--tip-msg);
+    background-color: aliceblue;
+    border-radius: 2rem;
+    box-shadow: 0px 4px 4px 3px rgba(0, 0, 0, 0.25);
+    padding: 1rem;
+    position: absolute;
+    top: calc(-100% - 2.5rem);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+
+    transition: opacity 150ms ease 0ms;
+}
+
+.disabled-tool-tip::before {
+    user-select: none;
+    pointer-events: none;
+    content: '▼';
+    color: aliceblue;
+    text-align: center;
+
+    position: absolute;
+    top: calc(-100% + 2.5rem);
+    left: 50%;
+
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24);
+    transform: translate(-50%, -50%);
+    opacity: 0;
+
+    transition: opacity 150ms ease 0ms;
+}
+
+
+.disabled-tool-tip:disabled:hover::after {
+    opacity: 1;
+    transition-delay: 500ms;
+}
+
+.disabled-tool-tip:disabled:hover::before {
+    opacity: 1;
+    transition-delay: 500ms;
+}
