--- a/views/partials/game-content.ejs
+++ b/views/partials/game-content.ejs
@@ -24,7 +24,7 @@
 <div class="hitmarker" id="hitmarker">+12</div>
 <div class="game-buttons" id="game-buttons">
   <button class="uno-button" id="uno-button">WA7ED!</button>
-  <button class="skip-button" id="skip-button">Skip turn</button>
+  <button class="skip-button disabled-tool-tip" disabled id="skip-button" style='--tip-msg: "You can only skip when you can skip"'>Skip turn</button>
 </div>
 
 <div class="turns-list scroll" id="turns-list">
