--- a/public/css/game.css
+++ b/public/css/game.css
@@ -128,7 +128,6 @@ body {
     user-select: none;
     box-shadow: -4px 4px 4px 3px rgba(0, 0, 0, 0.25);
     border-radius: 5pt;
-    /* border: var(--font) 2pt solid; */
     border: var(--card-border);
     transform: rotateX(var(--rx)) rotateY(var(--ry)) rotateZ(var(--rz));
     height: 10rem;
@@ -174,6 +173,8 @@ body {
     -moz-user-select: none;
     -o-user-select: none;
     user-select: none;
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .user-cards-count {
@@ -283,6 +284,9 @@ body {
     position: fixed;
     top: 0;
     right: 0;
+
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .turn-indicator {
@@ -511,6 +515,8 @@ body {
     border: 0;
     outline: 0;
     transition: background-color 25ms ease, border-top 50ms ease, border-bottom 50ms ease;
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .skip-button {
