--- a/public/css/index.css
+++ b/public/css/index.css
@@ -18,6 +18,8 @@ body {
     grid-row: 2 span;
     width: 13rem;
     height: 13rem;
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .user-image {
@@ -49,6 +51,8 @@ body {
     font-size: 36pt;
     font-weight: 900;
     position: relative;
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .nickname-label::after {
@@ -70,6 +74,8 @@ body {
     border-radius: 5rem;
     border: 0;
     outline: 0;
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .play-button {
@@ -86,6 +92,8 @@ body {
     border: 0;
     outline: 0;
     transition: background-color 25ms ease, border-top 50ms ease, border-bottom 50ms ease;
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .play-button:active {
@@ -105,6 +113,8 @@ body {
     border: 0;
     cursor: pointer;
     transition: background-color 25ms ease, border-top 50ms ease, transform 350ms cubic-bezier(0.75, 0, 0.25, 1.25);
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .customize-button:active {
@@ -140,6 +150,8 @@ body {
     transform-origin: calc(100vw - 8rem) 0rem;
     transform: scale(0);
     transition: transform 350ms cubic-bezier(0.75, 0, 0.25, 1.25);
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .customization-menu h2 {
@@ -214,6 +226,8 @@ body {
 .deck-skins-container {
     display: flex;
     gap: 1rem;
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .reset-customization-button,
@@ -231,6 +245,8 @@ body {
     border: 0;
     outline: 0;
     transition: background-color 25ms ease, border-top 50ms ease, border-bottom 50ms ease;
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .reset-customization-button {
