--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -25,6 +25,9 @@
     align-items: center;
     gap: 1rem;
 
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+
     animation: zoomIn forwards 250ms ease-out;
 }
 
@@ -69,6 +72,8 @@
     border: 0;
     outline: 0;
     transition: background-color 25ms ease, border-top 50ms ease, border-bottom 50ms ease;
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .modal>.modal-buttons-container>button:nth-child(2) {
