--- a/public/css/room.css
+++ b/public/css/room.css
@@ -21,6 +21,8 @@ h1 {
     display: grid;
     grid-auto-rows: 4.5rem;
     overflow-y: auto;
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .player {
@@ -79,6 +81,8 @@ h1 {
     grid-template-rows: auto 1fr auto;
 
     padding: 1rem 2rem;
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .settings {
@@ -88,6 +92,8 @@ h1 {
     align-items: start;
     justify-content: start;
     flex-direction: column;
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .action-buttons {
@@ -108,6 +114,8 @@ h1 {
     border: 0;
     outline: 0;
     transition: background-color 25ms ease, border-top 50ms ease, border-bottom 50ms ease;
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25)) drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.17));
 }
 
 .invite-button {
